# internal/app/router/user.go
@@ -13,8 +13,8 @@ func (s *UserApiRouter) InitApiRouter(Router *gin.RouterGroup) {
 	var sysUser = v1.ApiGroupSys.SysUserApi
 	{
 		Router.POST("/change_password", sysUser.ChangePassword)
-		Router.GET("/user_info", sysUser.GetUserInfo)
-		Router.GET("/deposit_history", sysUser.GetUserDepositList)
-		Router.GET("/withdraw_history", sysUser.GetUserWithdrawList)
+		Router.GET("/user/info", sysUser.GetUserInfo)
+		Router.GET("/deposit/history", sysUser.GetUserDepositList)
+		Router.GET("/withdraw/history", sysUser.GetUserWithdrawList)
 	}
 }
